[package]
name = "twin-stick-shooter-client"
version = "0.1.0"
authors = ["Michael VanBemmel <michael.vanbemmel@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cgmath = "0.17"
console_error_panic_hook = "0.1"
derive_more = "0.99"
js-sys = { version = "0.3" }
rand = "0.8"
rand_distr = "0.4"
twin-stick-shooter-core = { path = "../twin-stick-shooter-core" }
wasm-bindgen = "0.2"

[dependencies.legion]
version = "0.3"
default-features = false
features = [
    "codegen",
    "extended-tuple-impls",
    "wasm-bindgen",
]

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasGradient",
    "CanvasRenderingContext2d",
    "console",
    "CssStyleDeclaration",
    "Document",
    "DomRect",
    "Element",
    "Event",
    "EventTarget",
    "Gamepad",
    "GamepadButton",
    "GamepadMappingType",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "Location",
    "Navigator",
    "Node",
    "TextMetrics",
    "TouchEvent",
    "Window",
]
