[package]
name = "twin-stick-shooter-core"
version = "0.1.0"
authors = ["Michael VanBemmel <michael.vanbemmel@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17"
getrandom = { version = "0.2", features = ["js"]}
legion = { version = "0.3", default-features = false, features = ["codegen", "wasm-bindgen"] }
rand = "0.8"
rand_distr = "0.4"
rand_pcg = "0.3"
