[package]
name = "twin-stick-shooter-server"
version = "0.1.0"
authors = ["Michael VanBemmel <michael.vanbemmel@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64 = "0.13"
bytes = "0.5"
clap = "2"
futures-util = "0.3"
hyper = "0.13"
sha-1 = "0.9"
structopt = "0.3"
thiserror = "1"
tokio-compat-02 = "0.1"
tokio-tungstenite = "0.12"
tungstenite = "0.11"
webrtc-unreliable = "0.5"

[dependencies.tokio]
version = "0.3"
features = [
    "fs",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
]
